fix(maskedTextBox): add missing border for Angular maskedTextBox

--- a/scss/input/_layout.scss
+++ b/scss/input/_layout.scss
@@ -22,7 +22,7 @@
         -webkit-appearance: none;
     }
 
-    .k-maskedtextbox {
+    .k-maskedtextbox:not(.k-textbox) {
         display: inline-flex;
         border-width: 0;
     }
